[WIP] More Extension-Proxy Work